--- a/app/views/quotes/new.html.haml
+++ b/app/views/quotes/new.html.haml
@@ -1,10 +1,10 @@
 .row
-  .col.s8.offset-s2
+  .col.s12
     %h3
-      Create a new quote for
-      =@person.nickname
+      %strong= @person.first_name + " " + @person.last_name
+      \ // New Quote
     = form_for @quote do |f|
       .col.s12
       %h5 What did they say?
       = f.text_field(:text, placeholder: "The quote")
-      = f.button 'save quote', class: "btn waves-effect waves-light"
+      = f.button 'save quote', class: "btn waves-effect waves-light right"
