--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -18,5 +18,5 @@
       - @quotes.each do |quote|
         %tr
           %td.flow-text= quote.text
-          %td=link_to "Edit", edit_quote_path(quote), class: "active"
-          %td=link_to "Delete", quote_path(quote), :method => :delete, class: "active"
+          %td=link_to "Edit", edit_quote_path(quote.id), class: "active"
+          %td=link_to "Delete", quote_path(quote.id), :method => :delete, class: "active"
