--- a/app/views/quotes/edit.html.haml
+++ b/app/views/quotes/edit.html.haml
@@ -2,5 +2,5 @@
   .col.s12
     %h3
       %strong= @person.first_name + " " + @person.last_name
-      \ // New Quote
+      \ // Edit Quote
     = render 'quotes/form'
