--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -1,8 +1,8 @@
 %nav
   .nav-wrapper
     %a#logo.brand-logo{:href => people_path}
-      Pithy
-      %i.material-icons mic_none
+      %i.material-icons.strong mic_none
+      \ pithy
     %a.button-collapse{"data-activates" => "nav-mobile", :href => people_path}
       %i.material-icons menu
     %ul.right.hide-on-med-and-down
