--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -1,4 +1,3 @@
 %h3 All People
 %hr
-- @people.each do |person|
-  %h4= link_to person.first_name + " " + person.last_name, person_path(person.nickname)
+=render 'people/all'
