--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -1,5 +1,11 @@
+// Nav Styling
+
 #logo {
   font-family: Damion;
   font-size: 2.5em;
   margin-left: 0.3em;
+}
+
+#dropdown1 {
+  margin-top: 64px;
 }
