--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -26,8 +26,7 @@
       - if user_signed_in?
         %li
           %a#test-new{:href => new_person_path}
-            Add A Test
-            %i.material-icons note_add
+            Add a person
         -# %li
         -#   %a#tests-all{:href => tests_path}
         -#     See reports
