changed nav icon for person

--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -9,7 +9,7 @@
       - if user_signed_in?
         %li
           %a#test-new-1{:href => new_person_path}
-            %i.material-icons note_add
+            %i.material-icons perm_identity
         %li
         -#   %a#tests-all-1{:href => tests_path}
         -#     %i.material-icons equalizer
