--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,6 @@
  */
 
 @import "materialize/components/color";
-$primary-color: color("brown", "darken-3") !default;
+$primary-color: color("purple", "darken-3") !default;
 $secondary-color: color("amber", "darken-1") !default;
 @import "materialize";
