--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -3,7 +3,8 @@
 #logo {
   font-family: Damion;
   font-size: 2.5em;
-  margin-left: 0.3em;
+  margin-left: 0.7em;
+  padding-top: 0.2em;
 }
 
 #dropdown1 {
