--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -1,12 +1,21 @@
 // Nav Styling
 
 #logo {
-  font-family: Damion;
-  font-size: 2.5em;
   margin-left: 0.7em;
-  padding-top: 0.2em;
+  padding-top: 0.3em;
 }
 
 #dropdown1 {
   margin-top: 64px;
+}
+
+// Welcome styling
+
+#welcome-quote {
+  margin-top: 6em;
+}
+
+#add-to-slack {
+  margin-top: 3em;
+  margin-bottom: 10em;
 }
