--- a/app/views/home/_welcome.html.haml
+++ b/app/views/home/_welcome.html.haml
@@ -8,5 +8,5 @@
     .col.s8
       %p.flow-text.valign We agree. Make your Slack conversations more pithy ...
     .col.s4#logo-box
-      %a.valign{:href => "https://slack.com/oauth/authorize?scope=incoming-webhook,commands&client_id=110955535366.110968354023"}
+      %a.valign{:href => new_api_v1_slack_auth_path}
         %img{:alt => "Add to Slack", :height => "40", :src => "https://platform.slack-edge.com/img/add_to_slack.png", :srcset => "https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x", :width => "139"}/
