--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -1,7 +1,7 @@
 %nav
   .nav-wrapper
     %a#logo.brand-logo{:href => people_path}
-      = image_tag("/assets/pithy-long", id: "pithy-long")
+      = image_tag("pithy-long", id: "pithy-long")
     %a.button-collapse{"data-activates" => "nav-mobile", :href => people_path}
       %i.material-icons menu
     %ul.right.hide-on-med-and-down
