--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -1,6 +1,6 @@
 %nav
   .nav-wrapper
-    %a#logo.brand-logo{:href => people_path}
+    %a#logo.brand-logo{:href => root_path}
       = image_tag("pithy-long", id: "pithy-long")
     %a.button-collapse{"data-activates" => "nav-mobile", :href => people_path}
       %i.material-icons menu
