--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -11,6 +11,14 @@
 
 // Welcome styling
 
+#home-img {
+  margin-top: 2em;
+  background-image: url("pithy-home.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
 #welcome-quote {
   margin-top: 6em;
 }
