adding in validations for quotes and people

--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -9,6 +9,13 @@
   margin-top: 64px;
 }
 
+// Error messages styling
+
+#toast-container {
+  top: 7% !important;
+  right: 8% !important;
+}
+
 // Welcome styling
 
 #home-img {
