--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,19 @@
   %body
     = render 'layouts/nav'
     .container
+      - flash.each do |key, value|
+        - value.split("/").each do |flash_text|
+          :javascript
+            var toast_colours = {
+              "notice": 'green',
+              "success": 'green',
+              "error": 'orange',
+              "alert": 'orange'
+            };
+            function toast_colour(flashKey) {
+              return toast_colours[flashKey];
+            };
+            $(function(){Materialize.toast("#{flash_text}", 8000, toast_colour('#{key}'));});
       = yield
 
       %p.notice= notice
