adding in support & privacy pages

--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -9,6 +9,10 @@
   margin-top: 64px;
 }
 
+#nav-icon {
+  margin-left: 0.5em;
+}
+
 // Footer Styling
 
 ul#footer-content {
@@ -17,8 +21,7 @@ ul#footer-content {
 
 ul#footer-content > li {
   float: left;
-  margin-right: 2em;
-  margin-left: 2em;
+  margin-right: 4em;
 }
 
 body {
