--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,12 +1,12 @@
 %footer.page-footer
   .container
     .row
-      .col.l6.s4.offset-s4
+      .col.l6.s12
         %ul#footer-content
           %li
-            %a.grey-text.text-lighten-4.center-align{:href => "static/help"} Help
+            %a.grey-text.text-lighten-4{:href => static_path("help") } Help
           %li
-            %a.grey-text.text-lighten-4{:href => "/static/privacy-policy"} Privacy Policy
+            %a.grey-text.text-lighten-4{:href => static_path("privacy-policy")} Privacy Policy
   .footer-copyright
     .container
       © 2016 Copyright Text
