--- a/app/views/static/privacy-policy.html.haml
+++ b/app/views/static/privacy-policy.html.haml
@@ -267,7 +267,8 @@
   %br/
   %br/
 .innerText Pithy (www.itspithy.com)
-.innerText hello @ itspithy. com
+.innerText
+  =mail_to "hello@itspithy.com"
 .innerText
   %br>/
   Last Edited on 2016-12-08
