--- a/app/assets/stylesheets/static.scss
+++ b/app/assets/stylesheets/static.scss
@@ -1,6 +1,6 @@
 #ppBody
 {
-    font-size:11pt;
+    font-size:12pt;
     width:100%;
     margin:0 auto;
     text-align:justify;
@@ -9,4 +9,10 @@
 .ppConsistencies
 {
     display:none;
+}
+
+// Help styling
+
+#help-intro {
+  padding: 0;
 }
