--- a/app/views/layouts/_nav.html.haml
+++ b/app/views/layouts/_nav.html.haml
@@ -3,7 +3,7 @@
     %a#logo.brand-logo{:href => root_path}
       = image_tag("pithy-long.png", id: "pithy-long")
     %a.button-collapse{"data-activates" => "nav-mobile", :href => people_path}
-      %i.material-icons menu
+      %i.material-icons#nav-icon menu
     %ul.right.hide-on-med-and-down
       - if user_signed_in?
         %li
