updating homepage text to make more slack friendly

--- a/app/views/static/help.html.haml
+++ b/app/views/static/help.html.haml
@@ -11,7 +11,7 @@
             %li.flow-text * Will never sell or share your data
       .col.s12#help-intro
         %p.flow-text
-          Pithy is a community-driven projects, so feel free to create an account, add your favourite leaders and quotes. If you have any feedback or ideas for improvements, please send them to
+          Pithy is a community-driven project, so feel free to create an account, add your favourite leaders and quotes. If you have any feedback or ideas for improvements, please send them to
           = mail_to "hello@itspithy.com"
 
 %hr
@@ -23,4 +23,3 @@
     %p.flow-text Simply click on the "Add to Slack" button on the homepage.
     %h5 How do I remove Pithy from my Slack team?
     %p.flow-text Log into Slack on the web. Click on your your team name in the top left corner, then select "Apps & integrations". Then click "manage" in the top right hand corner to find a list of all the apps you have installed. Look for Pithy, click on it, and then click "Remove App".
-    
