--- a/app/assets/stylesheets/people.scss
+++ b/app/assets/stylesheets/people.scss
@@ -60,6 +60,20 @@ main {
   margin-bottom: 10em;
 }
 
+#intro-quote {
+  font-style: italic;
+  font-size: 1.5em;
+  margin-top: 0;
+}
+
+#intro-link {
+  font-size: 1.2em;
+}
+
+#second-para {
+  margin-bottom: 0;
+}
+
 // Card styling
 
 .card-image {
